# tokyo-sports-scraper

./: .editorconfig  .gitignore  README.md  pyproject.toml  sync_version.py
.github/ISSUE_TEMPLATE/: 01_feature_request.yml  02_bug_report.yml  config.yml  feature_request.md
.github/workflows/: publish.yml  tests.yml
tests/: test_formatter.py
tokyo_sports_scraper/: __init__.py  model.py  scraper.py
tokyo_sports_scraper/extractors/: __init__.py  race_info.py  rider_info.py
