[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "autorace-tokyo-sports-scraper"
version = "0.1.0"
description = "東京スポーツのオートレース情報を取得するスクレイピングライブラリ"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name="shimomo", email="github@shimomo.net" }
]
dependencies = [
    "beautifulsoup4",
    "lxml",
    "python-dateutil",
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest",
]
